--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="data.js"></script>
-    <script src="storage.js"></script>
-    <script src="weather.js"></script>
-    <script src="ui.js"></script>
-    <script src="app.js"></script>
+    <script src="/js/data.js"></script>
+    <script src="/js/storage.js"></script>
+    <script src="/js/weather.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
